--- a/SQLlite/app/src/main/AndroidManifest.xml
+++ b/SQLlite/app/src/main/AndroidManifest.xml
@@ -5,8 +5,10 @@
     <application
         android:name=".app.App"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -16,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditarCarro"></activity>
+        <activity android:name=".EditarCarro" />
+        <activity android:name=".buscarCarros"></activity>
     </application>
 
 </manifest>
